test/errors/type/table/values.yasl
mt.lookup({}, .values)(1)
